Updated build.xml.